--- a/views/index.html
+++ b/views/index.html
@@ -27,38 +27,40 @@
     <div class="container">
         <h1>HO INTEGRATION WITH ALEXA AND GO USING MQTT TEST # 2</h1>
         <div id="content" class="content"></div>
+        <button onclick="userInteract()">INTERACT WITH ME BEFORE LEAVE THIS PAGE</button>
     </div>
 
     <script>
-        const ws = new WebSocket(`ws://${window.location.host}/ws`);
 
+        const ws = new WebSocket(`ws://${window.location.host}/ws`);
         ws.onmessage = function(event) {
             const message = JSON.parse(event.data);
             const contentDiv = document.getElementById('content');
-            contentDiv.innerHTML = '';
-
+            contentDiv.innerHTML = ''; // Clear existing content to a "history log"
+            console.log("received", message)
             switch (message.type) {
                 case 'audio':
+                    var player = new Audio(message.data.src);
+                    player.play()
+                break;
                 case 'youtube':
-                    const url = message.data;
-                    const extension = url.split('.').pop();
-                    if (['mp3', 'wav'].includes(extension)) {
-                        const audio = document.createElement('audio');
-                        audio.controls = true;
-                        audio.src = url;
-                        contentDiv.appendChild(audio);
-                    } else if (['mp4', 'webm'].includes(extension)) {
-                        const video = document.createElement('video');
-                        video.controls = true;
-                        video.src = url;
-                        contentDiv.appendChild(video);
+                    if(message.data.onlyAudio){
+                        var player = new Audio(message.data.src);
+                        player.play()
+                        return
                     }
+                    const video = document.createElement('video');
+                    video.controls = true;
+                    video.src = message.data.src;
+                    contentDiv.appendChild(video); 
+                    video.play()
                     break;
                 case 'notify':
                     const notify = message.data;
                     const notifyDiv = document.createElement('div');
                     notifyDiv.innerHTML = `<h2>${notify.title}</h2><p>${notify.message}</p>`;
                     contentDiv.appendChild(notifyDiv);
+                    showNotification(notify.title, notify.message);
                     break;
                 case 'command':
                     console.log(`Command received: ${message.data}`);
@@ -77,7 +79,26 @@
         };
 
         ws.onerror = function(error) {
-            console.error('WebSocket error')
+            console.error('WebSocket error:', error);
+        };
+        ///ok. using a worker is much clean way to do that. But i will trully use containers on my HO home server.
+        function showNotification(title, message) {
+            if (Notification.permission === 'granted') {
+                new Notification(title, { body: message });
+            } else if (Notification.permission !== 'denied') {
+                Notification.requestPermission().then(permission => {
+                    if (permission === 'granted') {
+                        new Notification(title, { body: message });
+                    }
+                });
+            }
         }
 
-</script>
+        if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {
+            Notification.requestPermission();
+        }
+
+        function userInteract() {
+            alert("YEEP. Now we are in agree with browser resctrictions to play medias");
+        }
+    </script>
